Fix snippet causing overflow

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -873,7 +873,7 @@
   width: 200px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .hideMobile {
     display: none;
   }
@@ -971,7 +971,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .snippetContent {
     padding: 0;
   }
